{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 19,
  "lineage": "1a3c0eaf-86e5-ffb4-62a9-84075326cce7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-10-02T07:45:12.763-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dataflow-issue/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/dataflow-issue/global/networks/dataflow-test-vpc",
            "params": [],
            "priority": 1000,
            "project": "dataflow-issue",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataflow-issue/global/firewalls/allow-internal",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-02T07:45:13.430-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/dataflow-issue/global/firewalls/allow-ssh-iap",
            "log_config": [],
            "name": "allow-ssh-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/dataflow-issue/global/networks/dataflow-test-vpc",
            "params": [],
            "priority": 1000,
            "project": "dataflow-issue",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataflow-issue/global/firewalls/allow-ssh-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "kafka_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20250915",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/dataflow-issue/zones/us-central1-a/disks/kafka-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2025-10-02T08:36:09.778-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/dataflow-issue/zones/us-central1-a/instances/kafka-vm",
            "instance_id": "1507699554507760902",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "BR9Z4rvpi8A=",
            "metadata_startup_script": "#!/bin/bash\nset -e\n\n# 1. Install Prerequisites\napt-get update\napt-get install -y software-properties-common wget gnupg git python3-pip python3-venv curl\n\n# 2. Add Confluent APT Repository\nwget -qO - https://packages.confluent.io/deb/7.2/archive.key | apt-key add -\nadd-apt-repository \"deb [arch=amd64] https://packages.confluent.io/deb/7.2 stable main\"\napt-get update\n\n# 3. Install Confluent Community Platform\napt-get install -y confluent-commu [...]
            "name": "kafka-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/dataflow-issue/global/networks/dataflow-test-vpc",
                "network_ip": "10.0.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/dataflow-issue/regions/us-central1/subnetworks/dataflow-test-subnet",
                "subnetwork_project": "dataflow-issue"
              }
            ],
            "project": "dataflow-issue",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataflow-issue/zones/us-central1-a/instances/kafka-vm",
            "service_account": [
              {
                "email": "400001818357-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": true,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "dataflow-test"
            ],
            "tags_fingerprint": "P-bXPENGBLg=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/dataflow-issue/global/networks/dataflow-test-vpc",
            "mtu": 0,
            "name": "dataflow-test-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "3064937550804365570",
            "numeric_id": "3064937550804365570",
            "project": "dataflow-issue",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataflow-issue/global/networks/dataflow-test-vpc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-02T07:45:33.983-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/dataflow-issue/regions/us-central1/routers/dataflow-test-router",
            "name": "dataflow-test-router",
            "network": "https://www.googleapis.com/compute/v1/projects/dataflow-issue/global/networks/dataflow-test-vpc",
            "project": "dataflow-issue",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataflow-issue/regions/us-central1/routers/dataflow-test-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "dataflow-issue/us-central1/dataflow-test-router/dataflow-test-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "dataflow-test-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "dataflow-issue",
            "region": "us-central1",
            "router": "dataflow-test-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "type": "PUBLIC",
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.router",
            "google_compute_subnetwork.subnet",
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-10-02T07:45:13.173-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/dataflow-issue/regions/us-central1/subnetworks/dataflow-test-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "dataflow-test-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/dataflow-issue/global/networks/dataflow-test-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "dataflow-issue",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/dataflow-issue/regions/us-central1/subnetworks/dataflow-test-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7459430766744908054
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute"
          ]
        }
      ]
    }
  ]
}